footer gap patched and fixed

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,7 +6,12 @@
   white-space: nowrap;
   align-items: center;
   width: 100%;
-  z-index:1;
+  z-index: 1;
+}
+.nav-header-wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
 
 .nav-img-wrapper img {
